--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "css-loader": "^0.28.1",
     "deploy-to-gh-pages": "^1.3.3",
     "dropkickjs": "^2.1.10",
-    "hint.css": "^2.5.0",
+    "html-hint": "^0.2.4",
     "http-server": "^0.10.0",
     "https-browserify": "^1.0.0",
     "istanbul-instrumenter-loader": "^2.0.0",
