--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "prismjs": "^1.8.1",
     "remarkable": "1.7.1",
     "scrollparent": "^2.0.1",
-    "slugify": "^1.2.1",
+    "slugify": "1.2.1",
     "stream-http": "^2.6.1",
     "ts-helpers": "^1.1.2",
     "zone.js": "^0.8.17"
