--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "module": "dist/redoc.module.js",
   "types": "dist/redoc.module.d.ts",
   "scripts": {
-    "start":
-      "webpack-dev-server --config build/webpack.dev.js --content-base demo",
+    "start": "webpack-dev-server --config build/webpack.dev.js --content-base demo",
     "start:prod": "NODE_ENV=production npm start",
     "test": "npm run lint && node ./build/run_tests.js",
     "lint": "tslint -e \"lib/**/*{ngfactory|css.shim}.ts\" lib/**/*.ts",
@@ -27,14 +26,12 @@
     "e2e-server": "http-server -p 3000 tests/e2e",
     "e2e-copy": "cp dist/redoc.min.js tests/e2e/",
     "webdriver": "webdriver-manager update",
-    "deploy":
-      "node ./build/prepare_deploy.js && deploy-to-gh-pages --update demo",
+    "deploy": "node ./build/prepare_deploy.js && deploy-to-gh-pages --update demo",
     "branch-release": "git reset --hard && branch-release",
     "clean": "rimraf dist .tmp compiled lib/**/*.css",
     "ngc": "ngc -p tsconfig.json",
     "inline": "ng2-inline -o .tmp -r --compress \"lib/**/*.ts\"",
-    "build:module":
-      "npm run build:sass && npm run inline && ngc -p tsconfig.aot.json && npm run module:css",
+    "build:module": "npm run build:sass && npm run inline && ngc -p tsconfig.aot.json && npm run module:css",
     "module:css": "node build/join-module-css.js",
     "webpack:prod": "webpack --config build/webpack.prod.js --profile --bail",
     "build:sass": "node-sass -q -o lib lib",
@@ -64,24 +61,24 @@
     "@angular/platform-browser": "^4.4.3",
     "@angular/platform-browser-dynamic": "^4.4.3",
     "@angular/platform-server": "^4.4.3",
-    "@types/jasmine": "^2.6.0",
+    "@types/jasmine": "^2.8.6",
     "@types/requirejs": "^2.1.31",
     "@types/should": "^11.2.0",
-    "@types/swagger-schema-official": "^2.0.6",
-    "@types/webpack": "^3.0.11",
-    "angular2-inline-template-style": "^1.1.0",
+    "@types/swagger-schema-official": "^2.0.9",
+    "@types/webpack": "^3.8.11",
+    "angular2-inline-template-style": "^1.3.0",
     "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.2.3",
+    "awesome-typescript-loader": "^3.5.0",
     "branch-release": "^1.0.3",
-    "chalk": "^2.1.0",
+    "chalk": "^2.3.2",
     "codelyzer": "^3.2.0",
-    "conventional-changelog-cli": "^1.3.3",
-    "css-loader": "^0.28.7",
+    "conventional-changelog-cli": "^1.3.21",
+    "css-loader": "^0.28.11",
     "deploy-to-gh-pages": "^1.3.3",
     "exports-loader": "^0.6.4",
     "http-server": "^0.10.0",
-    "istanbul-instrumenter-loader": "^3.0.0",
-    "jasmine-core": "^2.8.0",
+    "istanbul-instrumenter-loader": "^3.0.1",
+    "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
@@ -89,30 +86,30 @@
     "karma-coveralls": "^1.1.2",
     "karma-jasmine": "^1.0.2",
     "karma-mocha-reporter": "^2.2.4",
-    "karma-remap-coverage": "^0.1.4",
+    "karma-remap-coverage": "^0.1.5",
     "karma-should": "^1.0.0",
     "karma-sinon": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^2.0.4",
-    "node-sass": "^4.5.3",
+    "karma-webpack": "^2.0.13",
+    "node-sass": "^4.8.3",
     "npm-run-all": "^4.1.1",
-    "protractor": "^5.1.1",
+    "protractor": "^5.3.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
-    "rxjs": "^5.4.3",
-    "sass-loader": "^6.0.6",
+    "rxjs": "^5.5.9",
+    "sass-loader": "^6.0.7",
     "shelljs": "^0.7.7",
-    "should": "^13.1.0",
+    "should": "^13.2.1",
     "sinon": "^3.3.0",
     "source-map-loader": "^0.2.1",
     "string-replace-webpack-plugin": "^0.1.3",
     "style-loader": "^0.18.2",
-    "swagger-schema-official": "^2.0.0-bab6bed",
-    "tslint": "^5.7.0",
-    "typescript": "^2.5.2",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.8.2",
-    "webpack-merge": "^4.1.0"
+    "swagger-schema-official": "^2.0.0-d79c205",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.1",
+    "webpack": "^3.11.0",
+    "webpack-dev-server": "^2.11.2",
+    "webpack-merge": "^4.1.2"
   },
   "peerDependencies": {
     "@angular/common": "^4.1.1",
@@ -127,7 +124,7 @@
     "rxjs": "^5.3.1"
   },
   "dependencies": {
-    "core-js": "^2.5.1",
+    "core-js": "^2.5.5",
     "dropkickjs": "~2.1.10",
     "hint.css": "^2.3.2",
     "https-browserify": "^1.0.0",
@@ -137,12 +134,12 @@
     "mark.js": "github:julmot/mark.js",
     "openapi-sampler": "^0.4.3",
     "perfect-scrollbar": "^0.8.1",
-    "prismjs": "^1.8.1",
+    "prismjs": "^1.14.0",
     "remarkable": "1.7.1",
     "scrollparent": "^2.0.1",
     "slugify": "1.2.1",
-    "stream-http": "^2.6.1",
+    "stream-http": "^2.8.1",
     "ts-helpers": "^1.1.2",
-    "zone.js": "^0.8.17"
+    "zone.js": "^0.8.26"
   }
 }
