--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "babel-loader": "8.0.0-beta.2",
     "babel-plugin-styled-components": "^1.5.1",
     "beautify-benchmark": "^0.2.4",
+    "brace": "^0.11.1",
     "bundlesize": "^0.17.0",
     "conventional-changelog-cli": "^1.3.17",
     "copy-webpack-plugin": "^4.5.1",
@@ -88,12 +89,13 @@
     "fork-ts-checker-webpack-plugin": "^0.4.1",
     "html-webpack-plugin": "^3.1.0",
     "jest": "^22.4.3",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "prettier": "^1.5.3",
     "prettier-eslint": "^8.8.1",
     "puppeteer": "^1.2.0",
     "raf": "^3.4.0",
     "react": "^16.3.0-alpha.2",
+    "react-ace": "^6.0.0",
     "react-dom": "^16.3.0-alpha.2",
     "rimraf": "^2.6.2",
     "shelljs": "^0.8.1",
