--- a/package.json
+++ b/package.json
@@ -125,7 +125,7 @@
   "dependencies": {
     "core-js": "^2.5.1",
     "dropkickjs": "~2.1.10",
-    "hint.css": "^2.3.2",
+    "hint.css": "2.3.2",
     "https-browserify": "^1.0.0",
     "json-pointer": "^0.6.0",
     "json-schema-ref-parser": "^3.3.1",
