--- a/package.json
+++ b/package.json
@@ -23,12 +23,8 @@
   },
   "author": "",
   "license": "MIT",
-  "optionalDependencies": {
-    "@cypress/webpack-preprocessor": "^1.1.3",
-    "cypress": "~1.4.1",
-    "puppeteer": "^1.0.0"
-  },
   "devDependencies": {
+    "@cypress/webpack-preprocessor": "^1.1.3",
     "@types/dompurify": "^0.0.31",
     "@types/enzyme": "^3.1.8",
     "@types/enzyme-to-json": "^1.5.0",
@@ -49,6 +45,7 @@
     "conventional-changelog-cli": "^1.3.5",
     "core-js": "^2.5.1",
     "css-loader": "^0.28.7",
+    "cypress": "~1.4.1",
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-16": "^1.0.4",
     "enzyme-to-json": "^3.2.2",
@@ -58,6 +55,7 @@
     "mobx-react-devtools": "^4.2.15",
     "prettier": "^1.5.3",
     "prettier-eslint": "^8.8.1",
+    "puppeteer": "^1.0.0",
     "raf": "^3.4.0",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
