--- a/cli/Dockerfile
+++ b/cli/Dockerfile
@@ -1,30 +1,25 @@
-# Package the 'redoc-cli' as a docker image.
-#
 # To build:
-# $ cd <Redoc project directory>
-# $ docker build -t redoc-cli -f cli/Dockerfile .
+# - Must be in the project root directory
+# - docker build -f cli/Dockerfile .
 #
-# To run:
-# To display the command line options:
-# $ docker run --rm -it redoc-cli redoc-cli --help
-# .. will display the comand line help
-#
-# To the `swagger.yml` file in the current directory, and output 'redoc-static.html'
-# $  docker run --rm -it  -v $PWD:/data redoc-cli redoc-cli bundle swagger.yml
+# To run
+# - docker run --rm -i -t <image> --help
+
 
 FROM node:alpine
 
-# Needs python, alpine-sdk to build node packages
 RUN apk update && apk add --no-cache git python alpine-sdk nodejs
 
+# generate bundle
 WORKDIR /build
 COPY . /build
+#RUN cd cli && npm run compile:cli
+RUN yarn install --frozen-lockfile --ignore-optional --ignore-scripts
+RUN npm run bundle && npm run compile:cli
 
-RUN yarn install --frozen-lockfile --ignore-optional --ignore-scripts && \
-  npm run bundle && npm run compile:cli && \
-  npm install typescript && \
-  npm install iltorb  && \
-  npm install -g redoc-cli
+RUN npm install typescript
+RUN npm install iltorb
+RUN npm install -g redoc-cli
 
-WORKDIR /data
+ENTRYPOINT ["redoc-cli"]
 
