Fixed with help from RomanGotsiy  & xxxcoltxxx

--- a/cli/Dockerfile
+++ b/cli/Dockerfile
@@ -6,25 +6,18 @@
 #
 # To run:
 # To display the command line options:
-# $ docker run --rm -it redoc-cli redoc-cli --help
+# $ docker run --rm -it redoc-cli --help
 # .. will display the comand line help
 #
-# To the `swagger.yml` file in the current directory, and output 'redoc-static.html'
-# $  docker run --rm -it  -v $PWD:/data redoc-cli redoc-cli bundle swagger.yml
+# To turn `swagger.yml` file in the current directory, to html documentation 'redoc-static.html'
+# $  docker run --rm -it  -v $PWD:/data redoc-cli bundle swagger.yml
 
 FROM node:alpine
 
-# Needs python, alpine-sdk to build node packages
-RUN apk update && apk add --no-cache git python alpine-sdk nodejs
-
-WORKDIR /build
-COPY . /build
-
-RUN yarn install --frozen-lockfile --ignore-optional --ignore-scripts && \
-  npm run bundle && npm run compile:cli && \
-  npm install typescript && \
-  npm install iltorb  && \
-  npm install -g redoc-cli
+RUN npm install -g redoc-cli
 
 WORKDIR /data
+EXPOSE 8080
 
+ENTRYPOINT ["redoc-cli"]
+CMD []
