--- a/package.json
+++ b/package.json
@@ -54,13 +54,13 @@
   "author": "Roman Hotsiy",
   "license": "MIT",
   "devDependencies": {
-    "@angular/common": "^4.4.3",
-    "@angular/compiler": "^4.4.3",
-    "@angular/compiler-cli": "^4.4.3",
-    "@angular/core": "^4.4.3",
-    "@angular/platform-browser": "^4.4.3",
-    "@angular/platform-browser-dynamic": "^4.4.3",
-    "@angular/platform-server": "^4.4.3",
+    "@angular/common": "^6.1.10",
+    "@angular/compiler": "^6.1.10",
+    "@angular/compiler-cli": "^6.1.10",
+    "@angular/core": "^6.1.10",
+    "@angular/platform-browser": "^6.1.10",
+    "@angular/platform-browser-dynamic": "^6.1.10",
+    "@angular/platform-server": "^6.1.10",
     "@types/jasmine": "^2.6.0",
     "@types/requirejs": "^2.1.31",
     "@types/should": "^11.2.0",
@@ -95,7 +95,7 @@
     "protractor": "^5.1.1",
     "raw-loader": "^0.5.1",
     "rimraf": "^2.6.2",
-    "rxjs": "^5.4.3",
+    "rxjs": "^6.3.3",
     "sass-loader": "^6.0.6",
     "shelljs": "^0.7.7",
     "should": "^13.1.0",
@@ -111,18 +111,13 @@
     "webpack-merge": "^4.1.0"
   },
   "peerDependencies": {
-    "@angular/common": "^4.1.1",
     "@angular/compiler": "^4.1.1",
-    "@angular/compiler-cli": "^4.1.1",
     "@angular/core": "^4.1.1",
-    "@angular/forms": "^4.1.1",
-    "@angular/platform-browser": "^4.1.1",
-    "@angular/platform-browser-dynamic": "^4.1.1",
-    "@angular/platform-server": "^4.1.1",
-    "core-js": "^2.4.1",
-    "rxjs": "^5.3.1"
+    "@angular/forms": "^6.1.0",
+    "core-js": "^2.4.1"
   },
   "dependencies": {
+    "@angular/animations": "^6.1.10",
     "core-js": "^2.5.1",
     "dropkickjs": "~2.1.10",
     "hint.css": "2.3.2",
