--- a/package.json
+++ b/package.json
@@ -89,7 +89,7 @@
     "core-js": "^2.6.5",
     "coveralls": "^3.0.3",
     "css-loader": "^2.1.1",
-    "cypress": "~3.1.5",
+    "cypress": "^3.4.1",
     "deploy-to-gh-pages": "^1.3.6",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
@@ -98,7 +98,7 @@
     "html-webpack-plugin": "^3.1.0",
     "jest": "^24.3.1",
     "license-checker": "^25.0.1",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "mobx": "^4.3.1",
     "prettier": "^1.16.4",
     "prettier-eslint": "^8.8.2",
@@ -139,9 +139,10 @@
     "eventemitter3": "^3.0.0",
     "json-pointer": "^0.6.0",
     "json-schema-ref-parser": "^6.1.0",
+    "json-stringify-pretty-compact": "^2.0.0",
     "lunr": "2.3.6",
     "mark.js": "^8.11.1",
-    "marked": "^0.6.1",
+    "marked": "^0.7.0",
     "memoize-one": "^5.0.0",
     "mobx-react": "^5.4.3",
     "openapi-sampler": "1.0.0-beta.14",
