--- a/cli/package.json
+++ b/cli/package.json
@@ -1,38 +1,35 @@
 {
   "name": "redoc-cli",
-  "version": "0.7.0",
+  "version": "0.9.2",
   "description": "ReDoc's Command Line Interface",
   "main": "index.js",
   "bin": "index.js",
-  "repository": "https://github.com/Rebilly/ReDoc",
+  "repository": "https://github.com/Redocly/redoc",
   "author": "Roman Hotsiy <gotsijroman@gmail.com>",
   "license": "MIT",
+  "engines": {
+    "node": ">= 8"
+  },
   "dependencies": {
-    "chokidar": "^2.0.4",
-    "handlebars": "^4.0.11",
-    "isarray": "^2.0.4",
+    "chokidar": "^3.0.2",
+    "handlebars": "^4.1.2",
+    "isarray": "^2.0.5",
     "mkdirp": "^0.5.1",
     "mobx": "^4.2.0",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "node-libs-browser": "^2.2.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "redoc": "github:BusinessDuck/ReDoc#master",
-    "styled-components": "^4.1.1",
-    "tslib": "^1.9.3",
-    "yargs": "^12.0.5",
-    "node-fetch-h2": "^2.3.1-0",
-    "builtin-status-codes": "^3.0.0",
-    "to-arraybuffer": "^1.0.1"
-  },
-  "scripts": {
-    "ci-publish": "ci-publish"
+    "styled-components": "^4.3.2",
+    "tslib": "^1.10.0",
+    "yargs": "^13.3.0"
   },
   "publishConfig": {
     "access": "public"
   },
   "devDependencies": {
-    "@types/chokidar": "^1.7.5",
+    "@types/chokidar": "^2.1.3",
     "@types/handlebars": "^4.0.39",
-    "@types/mkdirp": "^0.5.2",
-    "ci-publish": "^1.3.1"
+    "@types/mkdirp": "^0.5.2"
   }
 }
