--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "redoc",
-  "version": "2.0.0-rc.4",
+  "version": "2.0.0-rc.18",
   "description": "ReDoc",
   "repository": {
     "type": "git",
-    "url": "git://github.com/Rebilly/ReDoc"
+    "url": "git://github.com/Redocly/redoc"
   },
   "engines": {
     "node": ">=6.9",
@@ -28,7 +28,7 @@
     "start": "webpack-dev-server --mode=development --env.playground --hot --config demo/webpack.config.ts",
     "start:prod": "webpack-dev-server --env.playground --mode=production --config demo/webpack.config.ts",
     "start:benchmark": "webpack-dev-server --mode=production --env.bench --config demo/webpack.config.ts",
-    "test": "npm run lint && npm run unit && npm run bundlesize && npm run license-check",
+    "test": "npm run lint && npm run unit && npm run license-check",
     "unit": "jest --coverage",
     "e2e": "cypress run",
     "e2e-ci": "cypress run --record",
@@ -36,7 +36,7 @@
     "cy:open": "cypress open",
     "bundle:clean": "rimraf bundles",
     "bundle:standalone": "webpack --env.standalone --mode=production",
-    "bundle:lib": "webpack --mode=production",
+    "bundle:lib": "webpack --mode=production && npm run declarations",
     "bundle": "npm run bundle:clean && npm run bundle:lib && npm run bundle:standalone",
     "declarations": "tsc --emitDeclarationOnly -p tsconfig.lib.json && cp -R src/types typings/",
     "stats": "webpack --env.standalone --json --profile --mode=production > stats.json",
@@ -52,79 +52,81 @@
     "docker:build": "docker build -f config/docker/Dockerfile -t redoc ."
   },
   "devDependencies": {
-    "@babel/core": "7.3.4",
+    "@babel/core": "7.6.2",
     "@babel/plugin-syntax-decorators": "7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-jsx": "7.2.0",
     "@babel/plugin-syntax-typescript": "7.3.3",
-    "@cypress/webpack-preprocessor": "4.0.3",
-    "@hot-loader/react-dom": "^16.8.4",
-    "@types/chai": "4.1.7",
-    "@types/dompurify": "^0.0.32",
-    "@types/enzyme": "^3.9.0",
+    "@cypress/webpack-preprocessor": "4.1.0",
+    "@hot-loader/react-dom": "^16.9.0",
+    "@types/chai": "4.2.3",
+    "@types/dompurify": "^0.0.33",
+    "@types/enzyme": "^3.10.3",
     "@types/enzyme-to-json": "^1.5.3",
-    "@types/jest": "^24.0.11",
+    "@types/jest": "^24.0.18",
     "@types/json-pointer": "^1.0.30",
-    "@types/lodash": "^4.14.122",
+    "@types/lodash": "^4.14.141",
     "@types/lunr": "^2.3.2",
-    "@types/mark.js": "^8.11.3",
-    "@types/marked": "^0.6.3",
-    "@types/prismjs": "^1.9.1",
-    "@types/prop-types": "^15.7.0",
-    "@types/react": "^16.8.7",
-    "@types/react-dom": "^16.8.2",
+    "@types/mark.js": "^8.11.4",
+    "@types/marked": "^0.6.5",
+    "@types/prismjs": "^1.16.0",
+    "@types/prop-types": "^15.7.3",
+    "@types/react": "^16.9.3",
+    "@types/react-dom": "^16.9.1",
     "@types/react-hot-loader": "^4.1.0",
     "@types/react-tabs": "^2.3.1",
-    "@types/styled-components": "^4.1.12",
+    "@types/styled-components": "^4.1.19",
     "@types/tapable": "1.0.4",
-    "@types/webpack": "^4.4.25",
-    "@types/webpack-env": "^1.13.9",
-    "@types/yargs": "^12.0.9",
-    "babel-loader": "8.0.5",
-    "babel-plugin-styled-components": "^1.10.0",
+    "@types/webpack": "^4.39.2",
+    "@types/webpack-env": "^1.14.0",
+    "@types/yargs": "^13.0.3",
+    "babel-loader": "8.0.6",
+    "babel-plugin-styled-components": "^1.10.6",
     "beautify-benchmark": "^0.2.4",
-    "bundlesize": "^0.17.1",
-    "conventional-changelog-cli": "^2.0.12",
-    "copy-webpack-plugin": "^5.0.0",
-    "core-js": "^2.6.5",
-    "coveralls": "^3.0.3",
-    "css-loader": "^2.1.1",
-    "cypress": "~3.1.5",
-    "deploy-to-gh-pages": "^1.3.6",
-    "enzyme": "^3.9.0",
-    "enzyme-adapter-react-16": "^1.10.0",
-    "enzyme-to-json": "^3.3.5",
-    "fork-ts-checker-webpack-plugin": "1.0.0",
+    "bundlesize": "^0.18.0",
+    "conventional-changelog-cli": "^2.0.23",
+    "copy-webpack-plugin": "^5.0.4",
+    "core-js": "^3.2.1",
+    "coveralls": "^3.0.6",
+    "css-loader": "^3.2.0",
+    "cypress": "~3.4.1",
+    "deploy-to-gh-pages": "^1.3.7",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-to-json": "^3.4.0",
+    "fork-ts-checker-webpack-plugin": "1.5.0",
     "html-webpack-plugin": "^3.1.0",
-    "jest": "^24.3.1",
+    "jest": "^24.9.0",
     "license-checker": "^25.0.1",
-    "lodash": "^4.17.11",
+    "lodash": "^4.17.15",
     "mobx": "^4.3.1",
-    "prettier": "^1.16.4",
-    "prettier-eslint": "^8.8.2",
-    "puppeteer": "^1.13.0",
+    "prettier": "^1.18.2",
+    "prettier-eslint": "^9.0.0",
     "raf": "^3.4.1",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
-    "rimraf": "^2.6.3",
+    "react": "^16.10.1",
+    "react-dom": "^16.10.1",
+    "rimraf": "^3.0.0",
     "shelljs": "^0.8.3",
     "source-map-loader": "^0.2.4",
-    "style-loader": "^0.23.1",
-    "styled-components": "^4.1.3",
-    "ts-jest": "24.0.0",
-    "ts-loader": "5.3.3",
-    "ts-node": "^8.0.3",
-    "tslint": "^5.13.1",
-    "tslint-react": "^3.4.0",
-    "typescript": "^3.3.3333",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1",
+    "style-loader": "^1.0.0",
+    "styled-components": "^4.4.0",
+    "ts-jest": "24.1.0",
+    "ts-loader": "6.2.0",
+    "ts-node": "^8.4.1",
+    "tslint": "^5.20.0",
+    "tslint-react": "^4.1.0",
+    "typescript": "^3.6.3",
+    "unfetch": "^4.1.0",
+    "url-polyfill": "^1.1.7",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.1",
     "webpack-node-externals": "^1.6.0",
-    "workerize-loader": "^1.0.4",
+    "workerize-loader": "^1.1.0",
     "yaml-js": "^0.2.3"
   },
   "peerDependencies": {
+    "core-js": "^3.1.4",
     "mobx": "^4.2.0 || ^5.0.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
@@ -133,27 +135,28 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "decko": "^1.2.0",
-    "dompurify": "^1.0.10",
-    "eventemitter3": "^3.0.0",
+    "dompurify": "^2.0.3",
+    "eventemitter3": "^4.0.0",
     "json-pointer": "^0.6.0",
     "json-schema-ref-parser": "^6.1.0",
     "lunr": "2.3.6",
     "mark.js": "^8.11.1",
-    "marked": "^0.6.1",
-    "memoize-one": "^5.0.0",
-    "mobx-react": "^5.4.3",
-    "openapi-sampler": "1.0.0-beta.14",
+    "marked": "^0.7.0",
+    "memoize-one": "~5.0.5",
+    "mobx-react": "^6.1.3",
+    "openapi-sampler": "1.0.0-beta.15",
     "perfect-scrollbar": "^1.4.0",
-    "polished": "^3.0.3",
-    "prismjs": "^1.15.0",
+    "polished": "^3.4.1",
+    "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
     "react-dropdown": "^1.6.4",
-    "react-hot-loader": "^4.8.0",
+    "react-hot-loader": "^4.12.14",
     "react-tabs": "^3.0.0",
-    "slugify": "^1.3.4",
+    "slugify": "^1.3.5",
     "stickyfill": "^1.1.1",
-    "swagger2openapi": "^5.2.3",
-    "tslib": "^1.9.3"
+    "swagger2openapi": "^5.3.1",
+    "tslib": "^1.10.0",
+    "url-template": "^2.0.8"
   },
   "bundlesize": [
     {
