--- a/package.json
+++ b/package.json
@@ -135,10 +135,10 @@
     "styled-components": "^4.1.1"
   },
   "dependencies": {
-    "classnames": "^2.2.6",
     "ajv": "^6.4.0",
     "ajv-errors": "^1.0.0",
     "brace": "^0.11.1",
+    "classnames": "^2.2.6",
     "decko": "^1.2.0",
     "dompurify": "^1.0.11",
     "eventemitter3": "^4.0.0",
@@ -154,12 +154,13 @@
     "polished": "^3.4.1",
     "prismjs": "^1.17.1",
     "prop-types": "^15.7.2",
-    "react-dropdown": "^1.6.4",
-    "react-hot-loader": "^4.12.10",
-    "react-tabs": "^3.0.0",
-    "slugify": "^1.3.4",
     "qs": "^6.5.2",
     "react-ace": "^6.0.0",
+    "react-dropdown": "^1.6.4",
+    "react-hot-loader": "^4.12.10",
+    "react-switch": "^5.0.1",
+    "react-tabs": "^3.0.0",
+    "slugify": "^1.3.4",
     "stickyfill": "^1.1.1",
     "swagger2openapi": "^5.3.1",
     "tslib": "^1.10.0",
