--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "redoc",
-  "version": "2.0.0-rc.22",
+  "name": "otx-redoc",
+  "version": "20.1.0",
   "description": "ReDoc",
   "repository": {
     "type": "git",
