chore: ran prettier

--- a/package.json
+++ b/package.json
@@ -195,6 +195,7 @@
     "singleQuote": true,
     "trailingComma": "all",
     "printWidth": 100,
-    "parser": "typescript"
+    "parser": "typescript",
+    "arrowParens": "avoid"
   }
 }
