--- a/package.json
+++ b/package.json
@@ -57,8 +57,10 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-syntax-jsx": "^7.10.4",
     "@babel/plugin-syntax-typescript": "^7.10.4",
+    "@babel/plugin-transform-react-jsx": "^7.10.4",
     "@cypress/webpack-preprocessor": "^5.4.2",
     "@hot-loader/react-dom": "^16.12.0",
+    "@mdx-js/loader": "^1.6.16",
     "@types/chai": "^4.2.12",
     "@types/dompurify": "^2.0.2",
     "@types/enzyme": "^3.10.5",
@@ -109,6 +111,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
+    "rehype-stringify": "^8.0.0",
+    "remark-slug": "^6.0.0",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
     "source-map-loader": "^1.0.1",
@@ -119,6 +123,7 @@
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7",
     "unfetch": "^4.1.0",
+    "unist-util-visit": "^2.0.3",
     "url-polyfill": "^1.1.10",
     "webpack": "^4.44.0",
     "webpack-cli": "^3.3.12",
