--- a/package.json
+++ b/package.json
@@ -140,6 +140,7 @@
     "styled-components": "^4.1.1"
   },
   "dependencies": {
+    "@mdx-js/react": "^1.6.16",
     "@types/node": "^13.11.1",
     "classnames": "^2.2.6",
     "decko": "^1.2.0",
@@ -155,6 +156,7 @@
     "openapi-sampler": "^1.0.0-beta.16",
     "perfect-scrollbar": "^1.4.0",
     "polished": "^3.6.5",
+    "prism-react-renderer": "^1.1.1",
     "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react-dropdown-aria": "^2.0.7",
