--- a/.github/workflows/demo-deploy-s3.yml
+++ b/.github/workflows/demo-deploy-s3.yml
@@ -19,6 +19,13 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: cache node modules
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
+          key: npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            npm-${{ hashFiles('package-lock.json') }}
+            npm-
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
