Fix issue with navigation when operationId contains backslash

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@cypress/webpack-preprocessor": "^5.4.2",
     "@hot-loader/react-dom": "^16.12.0",
     "@types/chai": "^4.2.12",
+    "@types/cssesc": "^3.0.0",
     "@types/dompurify": "^2.0.2",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-to-json": "^1.5.3",
@@ -137,6 +138,7 @@
     "@redocly/react-dropdown-aria": "^2.0.11",
     "@types/node": "^13.11.1",
     "classnames": "^2.2.6",
+    "cssesc": "^3.0.0",
     "decko": "^1.2.0",
     "dompurify": "^2.0.12",
     "eventemitter3": "^4.0.4",
