chore: upgrage openapi-sampler

--- a/package.json
+++ b/package.json
@@ -147,7 +147,7 @@
     "marked": "^0.7.0",
     "memoize-one": "~5.1.1",
     "mobx-react": "^7.0.5",
-    "openapi-sampler": "^1.0.0-beta.18",
+    "openapi-sampler": "^1.0.0",
     "perfect-scrollbar": "^1.4.0",
     "polished": "^3.6.5",
     "prismjs": "^1.22.0",
