--- a/package.json
+++ b/package.json
@@ -124,7 +124,7 @@
     "webpack-dev-server": "^3.11.0",
     "webpack-node-externals": "^2.5.0",
     "workerize-loader": "^1.3.0",
-    "yaml-js": "^0.2.3"
+    "js-yaml": "^4.1.0"
   },
   "peerDependencies": {
     "core-js": "^3.1.4",
