--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@types/yargs": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
     "babel-loader": "^8.1.0",
     "babel-plugin-styled-components": "^1.12.0",
     "beautify-benchmark": "^0.2.4",
@@ -93,7 +94,6 @@
     "css-loader": "^5.2.6",
     "cypress": "^7.4.0",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "eslint": "^7.27.0",
     "eslint-plugin-import": "^2.23.4",
@@ -168,6 +168,7 @@
     }
   ],
   "jest": {
+    "testEnvironment": "jsdom",
     "setupFilesAfterEnv": [
       "<rootDir>/src/setupTests.ts"
     ],
