--- a/.github/workflows/publish-cli.yml
+++ b/.github/workflows/publish-cli.yml
@@ -1,9 +1,10 @@
-name: Publish
+name: Publish cli
 
 on:
   push:
     tags:
       - v[0-9]*.[0-9]*.[0-9]*
+
 
 jobs:
   bundle:
@@ -24,7 +25,7 @@ jobs:
     - name: Store bundle artifact
       uses: actions/upload-artifact@v2
       with:
-        name: bundles
+        name: bundles-cli
         path: bundles
         retention-days: 1
   unit-tests:
@@ -43,45 +44,63 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: bundles
-        path: bundles
+        path: bundles-cli
     - run: npm run e2e
-  deploy-demo:
-    needs: [bundle, unit-tests, e2e-tests]
+  bundle-cli:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+      - name: Cache node modules
+        uses: actions/cache@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          path: ~/.npm
+          key: npm-${{ hashFiles('package-lock.json') }}
+          restore-keys: |
+            npm-${{ hashFiles('package-lock.json') }}
+            npm-
       - name: Install dependencies
         run: npm ci
-      - name: Download bundled artifacts
-        uses: actions/download-artifact@v2
+      - name: Bundle
+        run: npm run compile:cli
+      - name: Store bundle artifact
+        uses: actions/upload-artifact@v2
         with:
-          name: bundles
-          path: bundles
-      - name: Build package
-        run: npm run build:demo
-      - name: Deploy to S3 bucket
-        run: npm run deploy:demo
-      - name: Invalidate
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.CF_DEMO_DISTRIBUTION_ID }} --paths "/*"
-  publish:
-    needs: [bundle, unit-tests, e2e-tests]
+          name: cli
+          path: cli
+          retention-days: 1
+  check-version-cli:
+    name: Check Version
+    runs-on: ubuntu-latest
+    needs: [bundle-cli, unit-tests, e2e-tests]
+    outputs:
+      changed: ${{ steps.check.outputs.changed }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+      - name: Check if version has been updated
+        id: check
+        uses: EndBug/version-check@v2.0.1
+        with:
+          file-name: ./cli/package.json
+          file-url: https://unpkg.com/redoc-cli/package.json
+          static-checking: localIsNew
+  publish-cli:
+    needs: [ check-version-cli ]
+    if: needs.check-version-cli.outputs.changed == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-node@v1
         with:
           node-version: "14.x"
       - uses: actions/checkout@v2
-      - name: Download bundled artifacts
+      - name: Download cli bundled artifact
         uses: actions/download-artifact@v2
         with:
-          name: bundles
-          path: bundles
+          name: cli
+          path: cli
       - name: Cache node modules
         uses: actions/cache@v2
         with:
@@ -90,11 +109,7 @@ jobs:
           restore-keys: |
             npm-${{ hashFiles('package-lock.json') }}
             npm-
-      - name: Before deploy
-        run: npm run declarations
       - name: Publish to NPM
-        run: npm publish
+        run: cd cli/ && npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-      - name: After script
-        run: cat ./coverage/lcov.info | coveralls
