Fixed A11Y issues by replacing react-dropdown-aria by react-select component Fixed: ARIA input fields must have an accessible name Fixed: Ensure interactive controls are not nested Coded formatted with prettier Files changed: dropdown.ts styled.elements.ts PayloadSamples.tsx SchemaDefinition.tsx DiscriminatorDropdown.tsx ResponseDetails.tsx MediaTypeSamples.tsx Parameters.tsx MediaTypesSwitch.tsx DropdownOrLabel.tsx CallbackSamples.tsx GenericChildrenSwitcher.tsx

--- a/package.json
+++ b/package.json
@@ -148,7 +148,6 @@
   "dependencies": {
     "@babel/runtime": "^7.14.0",
     "@redocly/openapi-core": "^1.0.0-beta.54",
-    "@redocly/react-dropdown-aria": "^2.0.11",
     "classnames": "^2.3.1",
     "decko": "^1.2.0",
     "dompurify": "^2.2.8",
@@ -165,6 +164,7 @@
     "polished": "^4.1.3",
     "prismjs": "^1.24.1",
     "prop-types": "^15.7.2",
+    "react-select": "^5.1.0",
     "react-tabs": "^3.2.2",
     "slugify": "~1.4.7",
     "stickyfill": "^1.1.1",
