feat: add try-live poc

--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@cypress/webpack-preprocessor": "^5.9.0",
     "@hot-loader/react-dom": "^17.0.1",
     "@size-limit/preset-app": "^7.0.4",
+    "@svgr/webpack": "^6.1.2",
     "@types/chai": "^4.2.18",
     "@types/dompurify": "^2.2.2",
     "@types/enzyme": "^3.10.5",
@@ -138,6 +139,7 @@
     "ts-node": "^10.0.0",
     "typescript": "~4.1.0",
     "unfetch": "^4.2.0",
+    "url-loader": "^4.1.1",
     "url-polyfill": "^1.1.12",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.2",
@@ -156,11 +158,14 @@
     "@babel/runtime": "^7.14.0",
     "@redocly/openapi-core": "^1.0.0-beta.54",
     "@redocly/react-dropdown-aria": "^2.0.11",
+    "ace-builds": "^1.4.13",
+    "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "decko": "^1.2.0",
     "dompurify": "^2.2.8",
     "eventemitter3": "^4.0.7",
     "json-pointer": "^0.6.1",
+    "jsoneditor": "^9.5.7",
     "lunr": "^2.3.9",
     "mark.js": "^8.11.1",
     "marked": "^3.0.4",
