--- a/package.json
+++ b/package.json
@@ -120,6 +120,7 @@
     "style-loader": "^2.0.0",
     "styled-components": "^5.3.0",
     "ts-jest": "^27.0.2",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.0.0",
     "typescript": "~4.1.0",
     "unfetch": "^4.2.0",
