--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,7 @@
     "pretty": true,
     "lib": ["es2015", "es2016", "es2017", "dom", "WebWorker.ImportScripts"],
     "jsx": "react",
-    "types": ["webpack", "webpack-env", "jest"],
-    "allowSyntheticDefaultImports": true
+    "types": ["webpack", "webpack-env", "jest"]
   },
   "compileOnSave": false,
   "exclude": ["node_modules", ".tmp", "lib", "e2e/**"],
