--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "stickyfill": "^1.1.1",
     "style-loader": "^3.3.1",
     "swagger2openapi": "^7.0.6",
+    "tty-browserify": "^0.0.1",
     "url-template": "^2.0.8"
   },
   "size-limit": [
