--- a/cli/package.json
+++ b/cli/package.json
@@ -19,7 +19,7 @@
     "node-libs-browser": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "redoc": "2.0.0-rc.65",
+    "redoc": "github:mm-gmbd/redoc#users/maxm/6368-redoc-support-for-x-badges",
     "styled-components": "^5.3.0",
     "yargs": "^17.3.1"
   },
