--- a/cli/package.json
+++ b/cli/package.json
@@ -3,7 +3,9 @@
   "version": "0.13.9",
   "description": "ReDoc's Command Line Interface",
   "main": "index.js",
-  "bin": "index.js",
+  "bin": {
+    "redoc-cli": "index.js"
+  },
   "repository": "https://github.com/Redocly/redoc",
   "author": "Roman Hotsiy <gotsijroman@gmail.com>",
   "license": "MIT",
