Update package files for redoc and cli so they could be published and life be easier

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redoc",
+  "name": "@mm-gmbd/redoc",
   "version": "2.0.0-rc.65",
   "description": "ReDoc",
   "repository": {
@@ -57,7 +57,6 @@
     "deploy:demo": "aws s3 sync demo/dist s3://production-redoc-demo --acl=public-read",
     "license-check": "license-checker --production --onlyAllow 'MIT;ISC;Apache-2.0;BSD;BSD-2-Clause;BSD-3-Clause;CC-BY-4.0;Python-2.0' --summary",
     "docker:build": "docker build -f config/docker/Dockerfile -t redoc .",
-    "prepare": "husky install",
     "pre-commit": "pretty-quick --staged && npm run lint"
   },
   "devDependencies": {
@@ -103,7 +102,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.10",
     "html-webpack-plugin": "^5.3.1",
-    "husky": "^7.0.0",
     "jest": "^27.0.3",
     "js-yaml": "^4.1.0",
     "license-checker": "^25.0.1",
@@ -115,7 +113,6 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hot-loader": "^4.13.0",
-    "rimraf": "^3.0.2",
     "shelljs": "^0.8.4",
     "size-limit": "^7.0.4",
     "styled-components": "^5.3.0",
@@ -125,11 +122,13 @@
     "typescript": "~4.1.0",
     "unfetch": "^4.2.0",
     "url-polyfill": "^1.1.12",
-    "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^4.6.0",
     "webpack-node-externals": "^3.0.0",
-    "workerize-loader": "github:redocly/workerize-loader#webpack-5-dist"
+    "workerize-loader": "github:redocly/workerize-loader#webpack-5-dist",
+    "husky": "^7.0.0",
+    "rimraf": "^3.0.2",
+    "webpack-cli": "^4.7.2",
+    "webpack": "^5.38.1"
   },
   "peerDependencies": {
     "core-js": "^3.1.4",
