--- a/cli/package.json
+++ b/cli/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redoc-cli",
+  "name": "@mm-gmbd/redoc",
   "version": "0.13.9",
   "description": "ReDoc's Command Line Interface",
   "main": "index.js",
@@ -21,7 +21,7 @@
     "node-libs-browser": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "redoc": "github:mm-gmbd/redoc#users/maxm/6368-redoc-support-for-x-badges",
+    "@mm-gmbd/redoc": "2.0.0-rc.66",
     "styled-components": "^5.3.0",
     "yargs": "^17.3.1"
   },
