--- a/cli/package.json
+++ b/cli/package.json
@@ -1,11 +1,9 @@
 {
   "name": "redoc-cli-etn",
-  "version": "0.13.9",
+  "version": "0.13.10",
   "description": "ReDoc's Command Line Interface",
   "main": "index.js",
-  "bin": {
-    "redoc-cli": "index.js"
-  },
+  "bin": "index.js",
   "repository": "https://github.com/Redocly/redoc",
   "author": "Roman Hotsiy <gotsijroman@gmail.com>",
   "license": "MIT",
