feat: support links to property eg. `/#tag/pet/operation/newPet|name`

--- a/package.json
+++ b/package.json
@@ -200,6 +200,7 @@
     "singleQuote": true,
     "trailingComma": "all",
     "printWidth": 100,
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "endOfLine": "auto"
   }
 }
