--- a/cli/package.json
+++ b/cli/package.json
@@ -11,6 +11,7 @@
     "node": ">=12.0.0"
   },
   "dependencies": {
+    "boxen": "5.1.2",
     "chokidar": "^3.5.1",
     "handlebars": "^4.7.7",
     "isarray": "^2.0.5",
@@ -21,7 +22,6 @@
     "react-dom": "^17.0.1",
     "redoc": "2.0.0-rc.77",
     "styled-components": "^5.3.0",
-    "update-notifier": "^5.0.1",
     "yargs": "^17.3.1"
   },
   "publishConfig": {
